# pynsist

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.rst  appveyor.yml  flit.ini  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: test.yml
doc/: Makefile  cfgfile.rst  conf.py  design.rst  examples.rst  faq.rst  index.rst  installers.rst  make.bat  pypi-requirements.txt  releasenotes.rst
doc/api/: copymodules.rst  index.rst  main.rst  nsiswriter.rst
examples/: build_all_examples.py  clean.py
examples/_mu/: README.md  installer.cfg  prep_files.py  wixit.py  wrapper.wxs
examples/console/: guessnumber.py  installer.cfg
examples/multi_pkg_ex/: README.md  installer.cfg  myapp.py
examples/pygame/: README  installer.cfg
examples/pygi_mpl_numpy/: 1_download.sh  2_extract.sh  README.rst  gnome_preamble.py  installer.cfg  pygi_test.py
examples/pyglet/: README.md  installer.cfg
examples/pyglet/noisy/: __init__.py
examples/pygtk/: README.rst  grab_files.sh  gtk_preamble.py  helloworld.py  installer.cfg
examples/pygtk_mpl_numpy/: README.rst  grab_files.sh  hellomatplotlib.py  installer.cfg
examples/pyqt/: README  README.md  installer.cfg  start.py
examples/pyqt4/: README.md  fetch_pyqt_windows.sh  installer.cfg
examples/pyqt4/listapp/: __init__.py  main.py  main.ui
examples/pyqt5/: installer.cfg
examples/pyqt5/listapp/: __init__.py  main.py
examples/pyqt5_opencv/: README.md  installer.cfg
examples/pyqt5_opencv/app/: camera.py  main.py  (+1 more)
examples/pyqt5_qml/: installer.cfg
examples/pywebview/: README.md  download.sh  installer.cfg  pywin32_paths.py  simple_browser.py
examples/run_auto/: guessnumber.py  installer.cfg
examples/streamlit/: README.md  installer.cfg  pyproject.toml
examples/streamlit/src/: app.py  config.py  run_app.py
examples/streamlit/wheels/: blinker-1.4-py3-none-any.whl
examples/tkinter/: example.py  exampleapp.py  installer.cfg
nsisbuilder/: __init__.py  __main__.py  copymodules.py  template.nsi
nsist/: __init__.py  _assemble_launchers.py  _rewrite_shebangs.py  _system_path.py  commands.py  configreader.py  copymodules.py  nsigen.py  nsiswriter.py  pyapp.nsi  pyapp_installpy.nsi  pyapp_msvcrt.nsi  pyapp_w_pylauncher.nsi  pypi.py  python-pubkeys.txt  template.nsi  util.py  wheels.py  windowsversion.nsh
nsist/tests/: sample_preamble.py  sample_zip.egg  test_commands.py  test_configuration_validator.py  test_copymodules.py  test_installerbuilder.py  test_local_wheels.py  test_main.py  test_misc.py  test_pypi.py  utils.py
scripts/: pynsis  pynsist
(+19 files in other folders)
