[tool.poetry]
name = "emporio-vestiario-dashboard"
version = "0.1.0"
description = "Dashoboard to visualize Emporio Vestsiario data"
authors = ["Mattia Tantardini <mattia.tantardini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
streamlit = "^1.0.0"
plotly = "^5.3.1"
setuptools = "^58.0.4"
toml = "^0.10.2"
blinker = "^1.4"
click = "<8.0"
Jinja2 = "^3.0.1"
fpdf2 = "^2.4.5"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pynsist = "^2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
